# nextral

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.integration.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
bindings/node/: Cargo.toml  index.d.ts  index.js  index.ts  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/nextral/: __init__.py  __main__.py  cli.py  core.py
bindings/python/src/: lib.rs
contracts/graphql/: schema.graphql
contracts/grpc/: nextral.proto
contracts/http/: openapi.json
docs/: README.md  package-production.md  pending.md
docs/architecture/: project-structure.md
docs/cli/: README.md  help.md
docs/getting-started/: installation.md  quickstart.md
docs/memory/: README.md  architecture.md  memory-architecture.md
docs/memory/architecture/: README.md  retrieval-and-graph.md  runtime.md  storage-and-lifecycle.md
docs/memory/contracts/: README.md  graphify-contract.md  memory-record-schema.md  prospective-contract.md  retrieval-contract.md
docs/memory/operations/: README.md  consolidation-and-retention.md  incidents-and-recovery.md  reembed-and-backfill.md  slos-alerting-and-capacity.md
docs/memory/pipeline/: README.md  consolidation-pipeline.md  graphify-pipeline.md  ingestion-pipeline.md  retrieval-pipeline.md
docs/memory/types/: README.md
docs/memory/workflow/: README.md  forget-and-redaction.md  message-to-memory.md  proactive-followup.md
docs/releases/: 0.0.1.md
examples/: config.production.example.json  reembed.example.json
migrations/neo4j/: 0001_graph_schema.cypher
migrations/postgres/: 0001_core_schema.sql
migrations/qdrant/: memory_collection.json
migrations/s3/: archive_policy.json
scripts/: e2e-docker.ps1  stress-docker.ps1
src/: adapters.rs  config.rs  ingestion.rs  lib.rs  local_api.rs  planner.rs  ports.rs  prospective.rs  providers.rs  store.rs  topology.rs
src/adapters/: mod.rs  neo4j.rs  postgres.rs  qdrant.rs  redis.rs  s3.rs  transport.rs
src/api/: graphql.rs  grpc.rs  http.rs  mod.rs
src/config/: mod.rs
src/contracts/: mod.rs
src/domain/: audit.rs  graph.rs  mod.rs  policy.rs  reminder.rs  runtime_policy.rs  session.rs
src/graph/: mod.rs
src/memory/: mod.rs
src/neuros/: __init__.py  __main__.py  _version.py  cli.py
src/neuros/files/: __init__.py
src/neuros/integrations/: __init__.py
src/package/: mod.rs
src/ports/: mod.rs
src/providers/: mod.rs
src/retrieval/: mod.rs
src/runtime/: consolidation.rs  evaluation.rs  governance.rs  graphify.rs  ingestion.rs  intelligence.rs  mod.rs  prospective.rs  reembed.rs  reminders.rs  retrieval.rs  session.rs
src/scoring/: mod.rs
src/testkit/: mod.rs
(+12 files in other folders)
