[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "neuros"
version = "0.0.1"
description = "Docs-first scaffold for a memory-enabled agent runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Neuros Maintainers" }
]
keywords = ["agent", "memory", "llm", "langchain", "cli"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/astraive/neuros"
Documentation = "https://github.com/astraive/neuros/tree/main/docs"
Repository = "https://github.com/astraive/neuros"
Issues = "https://github.com/astraive/neuros/issues"

[project.scripts]
neuros = "neuros.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neuros"]

