[package]
name = "nextral-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "nextral_python"
crate-type = ["cdylib"]

[dependencies]
nextral = { path = "../.." }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
