[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nextral"
version = "0.0.1"
description = "Info-only Python package for Nextral publishing metadata."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nextral Maintainers" }
]
dependencies = []

[project.scripts]
nextral = "nextral.cli:main"

[tool.maturin]
bindings = "pyo3"
module-name = "nextral._nextral"
python-source = "."
manifest-path = "Cargo.toml"
